--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skejoolar - Ab Banega India Panctual</title>
+    <title>Skejoolar - Ab Banega College Panctual</title>
     <link href="../img/college.ico" rel="shortcut icon" type="image/x-icon">
     <script src="https://kit.fontawesome.com/2d11d15e86.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style.css">
