--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -56,13 +56,13 @@
         </div>
     </section>
     <div id="about"></div>
-    <section class="section" data-aos="zoom-in">
+    <section class="section" data-aos="zoom-in" data-aos-duration="1000">
         <div class="paras">
         <div class="secTag text-big" >About This Website</div>
         <div class="secSubTag text-small">Welcome to our website.This website helps all the students within the college to join any meeting or sessions or webinar of their respectives club in right time and Admin of each club can post the link , time and event of their club and the users or member of their club can accesses this meeting link in time </div>
     </div>
         <div class="thumbnail">
-            <img src="img/about.jpg" alt="" class="imgFluid">
+            <img src="img/about.jpg" alt="" class="imgFluid" data-aos="zoom-out" data-aos-duration="10000" data-aos-offset="200">
         </div>
     </section>
     <div id="services"></div>
@@ -81,7 +81,7 @@
         <div class="secSubTag text-small">In This website all the student admin/heads(without login) will be given by Student Tag which is on the right hand side of the navbar. In this Student Tag anyone can see all the events by their respective societies . In the Events Student will be provided by the name of the society title , description/venue , date of their events</div>
     </div>
         <div class="thumbnail">
-            <img src="img/studentservices.jpeg" alt="" class="imgFluid thirdimg">
+            <img src="img/studentservices.jpeg" alt="" class="imgFluid thirdimg" data-aos="zoom-out">
         </div>
         <div id="contact"></div>
     </section>
