--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -34,11 +34,11 @@
 		<input type="checkbox" id="chk" aria-hidden="true">
 
 			<div class="signup">
-				<form action="/register" method="post">
+				<form action="/register" method="post" class="abcd">
 					<label for="chk" aria-hidden="true">Sign up</label>
-					<input type="text" name="username" placeholder="User name" required="">
-					<input type="email" name="email" placeholder="Email" required="">
-					<input type="password" name="password" placeholder="Password" required="">
+					<input type="text" name="username" placeholder="User name" required=""/>
+					<input type="email" name="email" placeholder="Email" required=""/>
+					<input type="password" name="password" placeholder="Password" required=""/>
 					<button>Sign up</button>
 				</form>
 			</div>
@@ -46,7 +46,7 @@
 			<div class="login">
 				<form action="/login" method="post">
 					<label for="chk" aria-hidden="true">Login</label>
-					<input type="email" name="email" placeholder="Email" required="">
+					<input type="email" name="email" placeholder="Email" required="" autocomplete="off">
 					<input type="password" name="password" placeholder="Password" required="">
 					<button>Login</button>
 				</form>
